--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Essays'
+- GITenberg
 tableOfContents: 'On making friends -- Thoughts on cider -- One-night stands -- The
   owl train -- Safety pins -- Confessions of a "colyumist" -- Moving -- Surf fishing
   -- "Idolatry" -- The first commencement address -- The downfall of George Snipe
